add condition to penilaian
